[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.41.2", features = ["json", "round_series", "strings", "regex", "lazy","is_in", "ewma","rolling_window", "pct_change" ] }
clap = "4.5.4"
